@@ -68,6 +68,9 @@ struct lwp_info
 /* Attempt to initialize libthread_db.  */
 void check_for_thread_db (void);
 
+/* Tell the thread_db layer what native target operations to use.  */
+void thread_db_init (struct target_ops *);
+
 /* Find process PID's pending signal set from /proc/pid/status.  */
 void linux_proc_pending_signals (int pid, sigset_t *pending, sigset_t *blocked, sigset_t *ignored);
 
